// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderSummary Snapshot with table number 1`] = `
Array [
  <Card
    className="card"
  >
    <CardContent>
      <OrderSummaryCategories
        orders={
          Object {
            "categories": Object {
              "categoryA": Object {
                "price": 100,
                "qty": 2,
                "tax": 10,
              },
            },
          }
        }
      />
      <div>
        <QRCodeScanner />
        <OrderSummaryPrice
          orders={
            Object {
              "categories": Object {
                "categoryA": Object {
                  "price": 100,
                  "qty": 2,
                  "tax": 10,
                },
              },
            }
          }
        />
      </div>
      <div
        className="flexEndDiv buttonDiv"
      >
        <Button
          onClick={[Function]}
          size="small"
          variant="contained"
        >
          Clear
          <RemoveShoppingCart
            className="icon"
          />
        </Button>
        <Tooltip
          title="After place your order, the kitchen will start to cook your meal"
        >
          <div>
            <Button
              className="placeBtn"
              color="primary"
              disabled={false}
              onClick={[Function]}
              size="small"
              variant="contained"
            >
              Place
              <Send
                className="icon"
              />
            </Button>
          </div>
        </Tooltip>
      </div>
    </CardContent>
  </Card>,
  <AlertDialog
    content="This action will clear all item you has already add in the order."
    onClose={[Function]}
    onFirstButton={[Function]}
    onSecondButton={[Function]}
    open={false}
    secondButtonText="Clear"
    title="Clear all item in the order"
  />,
  <AlertDialog
    content="If you login your account, the order can be tracked easier. Would you like to login first?"
    firstButtonText="Place Order Without Login"
    onClose={[Function]}
    onFirstButton={[Function]}
    onSecondButton={[Function]}
    open={false}
    secondButtonText="Login First"
    title="Would you like to login?"
  />,
]
`;

exports[`OrderSummary Snapshot without table number 1`] = `
Array [
  <Card
    className="card"
  >
    <CardContent>
      <OrderSummaryCategories
        orders={
          Object {
            "categories": Object {
              "categoryA": Object {
                "price": 100,
                "qty": 2,
                "tax": 10,
              },
            },
          }
        }
      />
      <div>
        <QRCodeScanner />
        <OrderSummaryPrice
          orders={
            Object {
              "categories": Object {
                "categoryA": Object {
                  "price": 100,
                  "qty": 2,
                  "tax": 10,
                },
              },
            }
          }
        />
      </div>
      <div
        className="flexEndDiv buttonDiv"
      >
        <Button
          onClick={[Function]}
          size="small"
          variant="contained"
        >
          Clear
          <RemoveShoppingCart
            className="icon"
          />
        </Button>
        <Tooltip
          title="Please scan the QR code ont the table first"
        >
          <div>
            <Button
              className="placeBtn"
              color="primary"
              disabled={true}
              onClick={[Function]}
              size="small"
              variant="contained"
            >
              Place
              <Send
                className="icon"
              />
            </Button>
          </div>
        </Tooltip>
      </div>
    </CardContent>
  </Card>,
  <AlertDialog
    content="This action will clear all item you has already add in the order."
    onClose={[Function]}
    onFirstButton={[Function]}
    onSecondButton={[Function]}
    open={false}
    secondButtonText="Clear"
    title="Clear all item in the order"
  />,
  <AlertDialog
    content="If you login your account, the order can be tracked easier. Would you like to login first?"
    firstButtonText="Place Order Without Login"
    onClose={[Function]}
    onFirstButton={[Function]}
    onSecondButton={[Function]}
    open={false}
    secondButtonText="Login First"
    title="Would you like to login?"
  />,
]
`;
